<resources>
    <string name="app_name">Turismo</string>
    <string name="log_in">Log In</string>
    <string name="correoLogin">Correo</string>
    <string name="passwordLogin">Contraseña</string>
    <string name="login_logo_description">Login logo</string>
    <string name="texto_registro">No tienes una cuenta?</string>
    <string name="regsitro">Regsitrate</string>
    <string name="ingresar_button">Ingresar</string>
    <string name="register_name">Nombre</string>
    <string-array name="sortTypes">
        <item>A->Z</item>
        <item>Z->A</item>
        <item>Mayor popularidad</item>
        <item>Menor pupularidad</item>
        <item>Departamento A->Z</item>
        <item>Departamento Z->A</item>
        <item>Visita mas reciente</item>
        <item>Visita menos reciente</item>
    </string-array>

    <string-array name="sortDistance">
        <item>Todos</item>
        <item>5 Km</item>
        <item>10 Km</item>
        <item>20 Km</item>
        <item>50 Km</item>
        <item>100 Km</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="SHARED_PREFS_TURISMO">shared_prefs_turismo</string>
    <string name="USER_KEY">user_key</string>
    <string name="EMAIL_KEY">email_key</string>
</resources>