<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_base"
    tools:context=".Registro">

    <TextView
        android:id="@+id/titleRegister"
        android:text="Registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/name"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleRegister"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:hint="@string/register_name"
        android:textColorHint="@color/gray"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_account_circle_24"
        android:drawablePadding="7dp"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints=""
        android:hint="Apellido"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegister"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:hint="@string/correoLogin"
        android:textColorHint="@color/gray"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:padding="15dp"
        android:drawableStart="@drawable/login_email"
        android:drawablePadding="7dp"/>

    <com.hbb20.CountryCodePicker
        android:id="@+id/country"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:ccp_showFullName="true"
        app:ccp_showPhoneCode="false"
        app:ccp_showNameCode="false"
        app:ccp_autoDetectLanguage="true"
        app:ccp_defaultNameCode="GT"

        app:ccp_textGravity="LEFT"
        app:ccp_contentColor="@color/white"/>

    <EditText
        android:id="@+id/phone"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/country"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:hint="Teléfono"
        android:textColorHint="@color/gray"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_phone_24"
        android:drawablePadding="7dp"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:hint="@string/passwordLogin"
        android:textColorHint="@color/gray"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:padding="15dp"
        android:drawableStart="@drawable/login_password"
        android:drawablePadding="7dp"/>

    <EditText
        android:id="@+id/verify"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:hint="Verifica tu contraseña"
        android:textColorHint="@color/gray"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_check_24"
        android:drawablePadding="7dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/celeste"
        android:padding="12dp"
        android:layout_marginEnd="20dp"
        android:text="Registrar"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>